--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "modernizr": "~2.6.2",
     "jquery": "~1.10.2",
     "components-font-awesome": "~4.0.3",
-    "flat-ui-official": "~2.1.3"
+    "flat-ui-official": "~2.1.3",
+    "typeahead.js": "~0.10.2"
   }
 }
