--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "jquery": "~1.10.2",
     "components-font-awesome": "~4.0.3",
     "flat-ui-official": "~2.1.3",
-    "typeahead.js": "~0.10.2"
+    "typeahead.js": "~0.10.2",
+    "jquery.ui": "~1.10.4"
   }
 }
