--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "components-font-awesome": "~4.0.3",
     "flat-ui-official": "~2.1.3",
     "typeahead.js": "~0.10.2",
-    "jquery-ui": "~1.10.4"
+    "jquery-ui": "~1.10.4",
+    "spectrum": "~1.3.4"
   }
 }
